--- a/project.json
+++ b/project.json
@@ -20,6 +20,27 @@
       "status": "Complete",
       "image": "images/big_lemon.png",
       "githubLink": "#"
+    },
+    {
+      "name": "MUSA",
+      "description": "xxxxxxxxxxx",
+      "status": "Complete",
+      "image": "images/big_lemon.png",
+      "githubLink": "#"
+    },
+    {
+      "name": "MUSA",
+      "description": "xxxxxxxxxxx",
+      "status": "Complete",
+      "image": "images/big_lemon.png",
+      "githubLink": "#"
+    },
+    {
+      "name": "MUSA",
+      "description": "xxxxxxxxxxx",
+      "status": "Complete",
+      "image": "images/big_lemon.png",
+      "githubLink": "#"
     }
   ],
   "additionalProjects": [
